syntax = "proto3";

package api.worker.v1beta1;

import "validate/validate.proto";

option go_package = "github.com/openmarketplaceengine/openmarketplaceengine/internal/idl/api/worker/v1beta1";

service WorkerService {
  rpc GetWorker(GetWorkerRequest) returns (GetWorkerResponse) {}
  rpc UpdateWorkerStatus(UpdateWorkerStatusRequest) returns (UpdateWorkerStatusResponse) {}
  rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse) {}
}

enum WorkerStatus {
  WORKER_STATUS_UNSPECIFIED = 0;
  WORKER_STATUS_OFFLINE = 1;
  WORKER_STATUS_READY = 2;
  WORKER_STATUS_ON_JOB = 3;
  WORKER_STATUS_PAUSED = 4;
  WORKER_STATUS_DISABLED = 5;
}

message GetWorkerRequest {
  string worker_id = 1 [(validate.rules).string = {
    max_len: 36,
  }];
}

message GetWorkerResponse {
  Worker worker = 1;
}

message UpdateWorkerStatusRequest {
  string worker_id = 1 [(validate.rules).string = {
    max_len: 36,
  }];
  WorkerStatus status = 2 [(validate.rules).enum = {
    defined_only: true,
    not_in: [
      0
    ],
  }];
}

message UpdateWorkerStatusResponse {
  string worker_id = 1;
  WorkerStatus status = 2;
}

message ListWorkersRequest {
  WorkerStatus status = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message Worker {
  string worker_id = 1;
  WorkerStatus status = 2;
}

message ListWorkersResponse {
  repeated Worker workers = 1;
  string next_page_token = 2;
}
